src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-103.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units grid=-2.3\")"
---
items:
  - loc: "#units grid=-2.3"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: -2.3
        loc: grid=-2.3
        locs:
          correction: "-2.3"
          option: grid
        option: GridNorthCorrection
    type: UnitsDirective
