src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-105.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=g grid=2\")"
---
items:
  - loc: "#units a=g grid=2"
    locs:
      directive: "#units"
    options:
      - loc: a=g
        locs:
          option: a
          unit: g
        option: FrontsightAzimuthUnit
        unit: Grads
      - correction:
          unit: Degrees
          value: 2
        loc: grid=2
        locs:
          correction: "2"
          option: grid
        option: GridNorthCorrection
    type: UnitsDirective
