src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-107.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=g grid=2m\")"
---
items:
  - loc: "#units a=g grid=2m"
    locs:
      directive: "#units"
    options:
      - loc: a=g
        locs:
          option: a
          unit: g
        option: FrontsightAzimuthUnit
        unit: Grads
      - correction:
          unit: Mils
          value: 2
        loc: grid=2m
        locs:
          correction: 2m
          option: grid
        option: GridNorthCorrection
    type: UnitsDirective
