src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-11.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=daqv\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units order=daqv"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: order=daqv
              locs:
                option: order
                order: daqv
              option: Order
              order:
                - Distance
                - Azimuth
                - INVALID: q
                  issues:
                    - 0
                - Inclination
        type: UnitsDirective
issues:
  - code: EINVALIDORDERITEM
    loc: q
    message: Invalid measurement item
    severity: Error
