src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-110.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incd\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incd"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: incd
              option: PrimaryDistanceCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
